:bug: bugfix(scrollbar): fix scrollbar on home view

--- a/src/scss/scrollbar.scss
+++ b/src/scss/scrollbar.scss
@@ -10,13 +10,11 @@ html {
       /* Track */
       &-track {
         background-color: $libonatiGrayYellow;
-        border-radius: 2rem;
       }
     
       /* Handle */
       &-thumb {
         background: rgb(65, 64, 64);
-        border-radius: 2rem;
       }
     
       /* Handle on hover */
